cmake_minimum_required(VERSION 3.26)
project(Embedded-Diploma C)

set(CMAKE_C_STANDARD 90)

add_executable(Assignment1 "C Programming/C Basics/Assignment1.c")
add_executable(Assignment2 "C Programming/C Basics/Assignment2.c")
add_executable(Assignment3 "C Programming/C Arrays & Strings/Assignment3.c")
